Finish lowestCommonAncestor.